# nutrition-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  product.md
src/nutrition_cli/: __init__.py  cli.py  config.py  database.py  fdc_client.py  models.py  parser.py  reports.py  seed_data.py  units.py
tests/: test_parser.py  test_reports.py  test_units.py
