[project]
name = "nutrition-cli"
version = "0.1.0"
description = "Local-first nutrition logger with natural language parsing and USDA FoodData Central nutrient lookup."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "requests>=2.32",
  "rich>=13.7",
  "typer>=0.16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
nutrition = "nutrition_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
